--- a/style.css
+++ b/style.css
@@ -15,3 +15,9 @@ span{
     padding: 200px;
     font-size: 50px;
 }
+.con2 h3{
+    padding: 150px;
+    color:  white;
+    font-size: 35px;
+}
+    
