--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ span{
     font-size: 50px;
 }
 .con2 h2{
-    color: white;
+    color: black;
     padding: 150px;
     font-size: 35px;
     margin-top:200px;
